Fixed some warnings from TeXtidote.

--- a/template/master.tex
+++ b/template/master.tex
@@ -39,8 +39,8 @@
 
 %%  @brief  Adresse postale du client.
 \def\ClientAdresse{
-    Bâtiment X \\
-    46 RUE DES FACTRICES \\
+    Bâtiment X \newline
+    46 RUE DES FACTRICES \newline
     87160 ARNAC LA POSTE CEDEX 7
 }
 
@@ -52,8 +52,8 @@
 
 %%  @brief  Adresse de facturation, si différente de l'adresse principale.
 \def\ClientAdresseInvoicing{
-    Bâtiment Y \\
-    47 RUE DES FACTEURS \\
+    Bâtiment Y \newline
+    47 RUE DES FACTEURS \newline
     87160 ARNAC LA POSTE CEDEX 7
 }
 
