--- a/template/template/facture_document.tex
+++ b/template/template/facture_document.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 
-\thispagestyle{pagestyle_firstpage}
+\thispagestyle{pagestyleFirstpage}
 
 % %  Géometrie page de garde
 % \newgeometry{
