--- a/template/template/style.tex
+++ b/template/template/style.tex
@@ -158,7 +158,7 @@
 % ------------------------------------------------------------------------------
 %	Definition of a pagestyle for the first page header and footer
 % ------------------------------------------------------------------------------
-\fancypagestyle{pagestyle_firstpage}
+\fancypagestyle{pagestyleFirstpage}
 {
 	\pagestyle{fancy}
 
