--- a/template/template/geometry_default.tex
+++ b/template/template/geometry_default.tex
@@ -3,20 +3,20 @@
 
 
 \newlength{\geometryMarginTop}
-\setlength{\geometryMarginTop}{3cm}
+\setlength{\geometryMarginTop}{3 cm}
 
 \newlength{\geometryMarginBottom}
-\setlength{\geometryMarginBottom}{3cm}
+\setlength{\geometryMarginBottom}{3 cm}
 
 \newlength{\geometryMarginLeft}
-\setlength{\geometryMarginLeft}{2cm}
+\setlength{\geometryMarginLeft}{2 cm}
 
 \newlength{\geometryMarginRight}
-\setlength{\geometryMarginRight}{2cm}
+\setlength{\geometryMarginRight}{2 cm}
 
 
 \newlength{\geometryHeaderHeight}
-\setlength{\geometryHeaderHeight}{2cm}
+\setlength{\geometryHeaderHeight}{2 cm}
 
 
 %%  Default geometry
@@ -44,13 +44,13 @@
 \setlength{\oddsidemargin}{0pt}
 
 %%  4 - Margin between the "vertical offset" + 1 inch and the top of the page.
-\setlength{\topmargin}{-25mm}
+\setlength{\topmargin}{-25 mm}
 
 %%  5 - Height of the header
 \setlength{\headheight}{\geometryHeaderHeight}
 
 %%  6 - Separation between header and text frame
-\setlength{\headsep}{5mm}
+\setlength{\headsep}{5 mm}
 
 %%  7 - Height of text body
 \newlength{\geometryTextHeight}
@@ -67,12 +67,12 @@
 \setlength{\textwidth}{\geometryTextWidth}
 
 %%  9 - Separation between text body and marge notes
-\setlength{\marginparsep}{5mm}
+\setlength{\marginparsep}{5 mm}
 
 %%  10 - Marge notes width
 \newlength{\geometryMargeNotesWidth}
 \setlength{\geometryMargeNotesWidth}{\geometryMarginRight}
-\addtolength{\geometryMargeNotesWidth}{- 5mm}
+\addtolength{\geometryMargeNotesWidth}{-5 mm}
 \setlength{\marginparwidth}{\geometryMargeNotesWidth}
 
 %%  11 - Vertical offset between bottom of text body and bottom of footer
