--- a/template/template/utils/signature.tex
+++ b/template/template/utils/signature.tex
@@ -52,8 +52,8 @@
 
 \def\colFeat{blue!50!black} %Feature Color 1 for Main Color Theme.
 
-\def\WS{8cm}
-\def\HS{2.5cm}
+\def\WS{8 cm}
+\def\HS{2.5 cm}
 
 \makeatletter
     \def\eq@SigField{%
@@ -96,7 +96,7 @@
 			\rule{\pWidth}{2pt}\\
 			% Signature area
 			\fcolorbox{black!5!white}{black!5!white}{
-				\sigField[\Lock{/Action/Include/Fields [(name\pFieldKey)(pos\pFieldKey)(date\pFieldKey)]}]{\pFieldKey}{\pWidth - 4mm}{\pHeight}
+				\sigField[\Lock{/Action/Include/Fields [(name\pFieldKey)(pos\pFieldKey)(date\pFieldKey)]}]{\pFieldKey}{\pWidth -4 mm}{\pHeight}
 				% \ifthenelse{\equal{\pName}{}}%
 				% {
 				% 	% If no person name given
@@ -120,7 +120,7 @@
 				% 		\sigField{\pFieldKey}{\pWidth}{\pHeight}
 				% 	}%
 				% }%
-			}\\%[1mm]
+			}\\%[1 mm]
 		}
 	\end{varwidth}
 }
