--- a/template/template/company_infos.tex
+++ b/template/template/company_infos.tex
@@ -6,34 +6,34 @@
 
 %%  @brief Adresse postale de l'entreprise émettant la facture.
 \def\CompanyAddress{
-	My Company building \\
-	Somewhere Over The Rainbow \\
+	My Company building \newline
+	Somewhere Over The Rainbow \newline
 	01234 City
 }
 
 %%  @brief Numéro de téléphone de l'entreprise émettant la facture.
-\def\CompanyPhone{+33(0) 1 23 45 67 89}
+\def\CompanyPhone{+00(0) 0 00 00 00 00}
 
 %%  @brief Adresse email de l'entreprise émettant la facture.
 \def\CompanyEmail{company@example.com}
 
 
 %%  @brief SIRET de l'entreprise émettant la facture.
-\def\CompanySiret{NNN NNN NNN NNNNN}
+\def\CompanySiret{000 000 000 00000}
 
 %%  @brief Code APE/NAF de l'entreprise émettant la facture.
-\def\CompanyAPE{NNNNX}
+\def\CompanyAPE{0000X}
 
 
 
 % ------------------------------------------------------------------------------
 % Entreprise - Informations bancaires
 % ------------------------------------------------------------------------------
-\def\CompanyBIC{XXXX XXXX XXX}
+\def\CompanyBIC{BICB ICBI CBI}
 
-\def\CompanyIBAN{XXNN NNNN NNNN NNNN NNNN NNNN NNN}
+\def\CompanyIBAN{IB00 0000 0000 0000 0000 0000 000}
 
-\def\CompanyRibCodeBanque{NNNNN}
-\def\CompanyRibCodeGuichet{NNNNN}
-\def\CompanyRibNumCompte{NNNNNNNNNNN}
-\def\CompanyRibClef{NN}
+\def\CompanyRibCodeBanque{00000}
+\def\CompanyRibCodeGuichet{00000}
+\def\CompanyRibNumCompte{00000000000}
+\def\CompanyRibClef{00}
